--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,10 @@
+@font-face {
+  font-family: 'Cera Pro Medium';
+  font-style: normal;
+  font-weight: 500;
+  src: url('./assets/fonts/Cera_Pro_Medium.ttf') format('ttf');
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
