--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,10 @@
   src: url('./assets/fonts/Cera_Pro_Medium.ttf') format('truetype');
 }
 
+* {
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
